--- a/mysite/news/templates/news/index.html
+++ b/mysite/news/templates/news/index.html
@@ -21,20 +21,41 @@
     </nav>
 
     <div class = 'container mt-3'>
+
         <h1>{{title}}</h1>
+
         <div class = 'col-md-12'>
+
             {% for item in news %}
+    
             <div class="card mb-3">
                 <div class="card-header">
-                Категория: {{item.category}}
+
+                    Категория: {{item.category}}
+
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">{{item.title}}</h5>
-                    <p class="card-text">{{item.content}}</p>
-                    <a href="#" class="btn btn-primary">Read more ...</a>
+                    
+                    <div class = "media">
+                        {% if item.photo %}
+                        <img src = "{{item.photo.url}}" alt = "", width = "350" class = "mr-3">
+                        {% else %}
+                        <img src = "https://picsum.photos/id/1060/350/300/?blur2", width = "350">
+                        {% endif %}
+                        <h5 class="card-title">{{item.title}}</h5>
+    
+                        <p class="card-text">{{item.content}}</p>
+    
+                        <a href="#" class="btn btn-primary">Read more ...</a>
+
+                    </div>
+
                 </div>
+
                 <div class="card-footer text-muted">
-                {{item.created_at|date:'Y-m-d H:i:s'}}
+
+                    {{item.created_at|date:'Y-m-d H:i:s'}}
+
                 </div>
             </div>
             {% endfor %}
