Add constructor for templates
 - Optimized templates to build page with more little pages

 - Fixed trouble with incorrect work category pages

--- a/mysite/news/templates/news/category.html
+++ b/mysite/news/templates/news/category.html
@@ -1,20 +1,24 @@
 {% extends 'base.html' %}
 
-{% block title %} 
-    {{ title }} :: {{ block.super}}
+
+{% block title %}
+    {{ title }}
 {% endblock %}
 
-{% block sidebar %}
+
+{% block sidebar %} 
     {% include 'inc/_sidebar.html' %}
 {% endblock %}
 
 
 {% block content %} 
-
+    
 {% for item in news %}
 <div class="card mb-3">
     <div class="card-header">
-        Категория: {{item.category}}
+        Категория: <a href = "{% url 'category' item.category.pk %}"> 
+            {{item.category}} 
+        </a>
     </div>
     <div class="card-body">
         
@@ -25,7 +29,7 @@
             <img src = "https://picsum.photos/id/1060/350/300/?blur2", width = "350">
             {% endif %}
             <h5 class="card-title">{{item.title}}</h5>
-            <p class="card-text">{{item.content}}</p>
+            <p class="card-text">{{item.content | safe | linebreaks | truncatewords:50 }}</p>
             <a href="#" class="btn btn-primary">Read more ...</a>
         </div>
     </div>
