--- a/mysite/templates/inc/_sidebar.html
+++ b/mysite/templates/inc/_sidebar.html
@@ -1,5 +1,9 @@
+
+{% load news_tags %}
+
 <div class = 'col-md-3'>
     <div class = 'list-group'>
+        {% get_list_categories as categories %}
         {% for item in categories %}
             <a href = {% url 'category' item.pk %} class = 'list-group-item list-group-item-action'>{{item.title}}</a>
         {% endfor %}
