--- a/mysite/news/templates/news/index.html
+++ b/mysite/news/templates/news/index.html
@@ -10,28 +10,5 @@
 
 
 {% block content %} 
-
-{% for item in news %}
-<div class="card mb-3">
-    <div class="card-header">
-        Категория: {{item.category}}
-    </div>
-    <div class="card-body">
-        
-        <div class = "media">
-            {% if item.photo %}
-            <img src = "{{item.photo.url}}" alt = "", width = "350" class = "mr-3">
-            {% else %}
-            <img src = "https://picsum.photos/id/1060/350/300/?blur2", width = "350">
-            {% endif %}
-            <h5 class="card-title">{{item.title}}</h5>
-            <p class="card-text">{{item.content | safe | linebreaks | truncatewords:50 }}</p>
-            <a href=" {{ item.get_absolute_url }} " class="btn btn-primary">Read more ...</a>
-        </div>
-    </div>
-    <div class="card-footer text-muted">
-        {{item.created_at|date:'Y-m-d H:i:s'}}
-    </div>
-</div>
-{% endfor %}
+    {% include 'inc/_news_card.html' %}
 {% endblock %}
