--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,45 +1,38 @@
+
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
     <title>{% block title %} All news {% endblock %}</title>
   </head>
-  <body>
+  <body class = 'bg-dark'>
     {% include 'inc/_nav.html' %}
-    <div class="container mt-3">
+    <div class="container mt-3 ">
         <div class="row">
-            <div class="col-md-12">
-                <div class = 'col-md-3'>
-                    {% block sidebar %} Sidebar {% endblock %} 
-                </div>
-                <div class = 'col-md-9'>
-                    {% block content %} Content {% endblock %} 
-                </div>
+            <div class = 'col-md-3'>
+                {% block sidebar %} 
+                  Sidebar 
+                {% endblock %} 
+            </div>
+            <div class = 'col-md-9'>
+                {% block content %} 
+                  Content 
+                {% endblock %} 
             </div>
         </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
       integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
-      integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
-      crossorigin="anonymous"
-    ></script>
+  </script>
   </body>
 </html>
