--- a/mysite/news/templates/news/view_news.html
+++ b/mysite/news/templates/news/view_news.html
@@ -1,5 +1,10 @@
-{% extends 'base.html' %} {% block sidebar %} {% include 'inc/_sidebar.html' %}
-{% endblock %} {% block content %}
+{% extends 'base.html' %} 
+
+{% block sidebar %} 
+{% include 'inc/_sidebar.html' %}
+{% endblock %} 
+
+{% block content %}
 <div class="card mb-3 shadow-sm bg-secondary rounded" style = 'width: 500'>
     <div class="row">
         <div class="col-md-4 d-flex justify-content-center">
